# UNIP-PORTAL

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: deploy.yml  deploy_on_server_using_docker.yml
alembic/versions/: 20260322_0001_add_users_and_comunicados_support.py
app/: main.py
app/controllers/: auth_controller.py  comunicado_controller.py  evento_controller.py  file_controller.py  inscricao_controller.py  users.py  usuario_controller.py
app/core/: config.py  database.py  email_service.py  logging_config.py  security.py
app/middleware/: error_handler.py
app/models/: __init__.py  evento.py  inscricao.py  palestrante.py  sala.py  usuario.py
app/repositories/: curso_repository.py  palestrante_repository.py  presenca_repository.py  sala_repository.py
app/schemas/: auth.py  comunicado.py  evento.py  usuario.py
app/services/: auth_service.py  evento_service.py  inscricao_service.py  presenca_service.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
backend/alembic/: env.py
backend/api/: main.py
backend/app/: main.py
backend/core/: config.py  security.py
backend/endpoints/: admin.py  certificates.py  enrollment.py  events.py  internships.py  news.py  student.py  users.py
backend/persistence/: database.py
backend/router/: health_router.py
backend/schemas/: audit_schema.py  (+6 more)
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
(+228 files in other folders)
